# ament_cmake_bug_demo

./: .clang-format
caller/: CMakeLists.txt  package.xml
caller/include/caller/: caller.h
caller/src/: caller.cc
caller/srv/: ResultMsgTest.srv
common/: CMakeLists.txt  package.xml
common/include/common/: test.h
common/msg/: Result.msg
common/src/: test.cc
